# okena

./: .gitignore  CLAUDE.md  CONTEXT.md  Cargo.toml  ISSUES.md  LICENSE  README.md  STATUS.md  build.rs  install-icon.sh  install.ps1  install.sh  muxy.desktop  okena.desktop  run.bat  term-manager.desktop
crates/okena-app/: Cargo.toml
crates/okena-app-core/: Cargo.toml
crates/okena-app-core/src/: lib.rs  remote_config.rs  remote_snapshot.rs  settings.rs
crates/okena-app-core/src/workspace/: mod.rs
crates/okena-app/src/: CLAUDE.md  action_dispatch.rs  lib.rs  macros.rs  simple_root.rs  soft_close.rs
crates/okena-app/src/app/: detached_terminals.rs  extras.rs  headless.rs  mod.rs  notifications.rs  remote_commands.rs  remote_config.rs
crates/okena-app/src/git/: mod.rs
crates/okena-app/src/keybindings/: CLAUDE.md  config.rs  descriptions.rs  mod.rs  types.rs
crates/okena-app/src/remote_client/: mod.rs
crates/okena-app/src/terminal/: mod.rs
crates/okena-app/src/ui/: mod.rs  tokens.rs
crates/okena-app/src/views/: overlay_manager.rs  project_hover.rs  sidebar_controller.rs
crates/okena-cli/: Cargo.toml
crates/okena-cli/src/: CLAUDE.md  commands.rs  lib.rs  parser.rs  register.rs  resolve.rs
crates/okena-core/: Cargo.toml
crates/okena-core/src/: agent_harness.rs  agent_session.rs  agent_status.rs  api.rs  app_state.rs  keys.rs  lib.rs  process.rs  profiles.rs  remote_action.rs  render_stats.rs  selection.rs  send_payload.rs  soft_close.rs  timing.rs  types.rs  ws.rs
crates/okena-core/src/client/: config.rs  connection.rs  id.rs  mod.rs  state.rs  tls.rs  types.rs
crates/okena-core/src/process/: bus.rs
crates/okena-core/src/theme/: colors.rs  mod.rs  types.rs
crates/okena-daemon/: Cargo.toml
crates/okena-daemon-core/: Cargo.toml
crates/okena-daemon-core/src/: command_loop.rs  daemon.rs  daemon_config.rs  git_poll.rs  lib.rs  observers.rs  pty_loop.rs  reactor.rs  service_cx.rs  soft_close.rs  toast_poll.rs  workspace_cx.rs
crates/okena-daemon/src/: main.rs
crates/okena-ext-claude/: Cargo.toml
crates/okena-ext-claude/src/: harness.rs  lib.rs  settings.rs  status.rs  ui_helpers.rs  usage.rs
crates/okena-ext-updater/: Cargo.toml
crates/okena-ext-updater/src/: checker.rs  daemon_client.rs  downloader.rs  installer.rs  lib.rs  manager.rs  process.rs  status.rs  update_checker.rs
crates/okena-files/: Cargo.toml
crates/okena-files/src/: code_view.rs  content_search.rs  content_search_dialog.rs  file_scan.rs  file_search.rs  file_tree.rs  in_page_search.rs  lib.rs  list_directory.rs  list_overlay.rs  markdown_highlight.rs  project_fs.rs  selection.rs  syntax.rs  theme.rs
crates/okena-git/: CLAUDE.md  Cargo.toml
crates/okena-git/src/: blame.rs  branch_names.rs  commit_graph.rs  diff.rs  error.rs  gix_helpers.rs  lib.rs  repository.rs
crates/okena-git/src/diff_viewer/: mod.rs  (+6 more)
crates/okena-hooks/: Cargo.toml
crates/okena-hooks/src/: hook_monitor.rs  hooks.rs  lib.rs
crates/okena-markdown/: Cargo.toml
crates/okena-markdown/src/: lib.rs  parser.rs  render.rs  types.rs
crates/okena-markdown/tests/: inline_layout.rs
crates/okena-mobile-ffi/: Cargo.toml
crates/okena-mobile-ffi/src/: lib.rs  types.rs
crates/okena-remote-client/: Cargo.toml
crates/okena-remote-client/src/: backend.rs  connection.rs  lib.rs  manager.rs
crates/okena-remote-server/: Cargo.toml
crates/okena-remote-server/src/: auth.rs  bridge.rs  lib.rs  local.rs  pty_broadcaster.rs  serve.rs  server.rs  tls.rs  types.rs
crates/okena-services/: Cargo.toml
crates/okena-services/src/: config.rs  docker_compose.rs  error.rs  lib.rs  manager.rs  port_detect.rs
crates/okena-terminal/: CLAUDE.md  Cargo.toml
crates/okena-terminal/src/: backend.rs  input.rs  input_overlay.rs  lib.rs  macos_proc.rs  process.rs  pty_manager.rs  session_backend.rs  shell_config.rs  terminal.rs
crates/okena-theme/: Cargo.toml
crates/okena-theme/src/: app_theme.rs  custom.rs  gpui_helpers.rs  lib.rs
crates/okena-transport/: Cargo.toml
crates/okena-transport/src/: lib.rs  remote_action.rs
crates/okena-ui/: Cargo.toml
crates/okena-ui/src/: badge.rs  button.rs  chip.rs  click_detector.rs  code_block.rs  color_dot.rs  color_utils.rs  context_menu_backdrop.rs  dialog_actions.rs  dropdown.rs  empty_state.rs  expand.rs  file_icon.rs  focusable.rs  header_buttons.rs  icon_action_button.rs  icon_button.rs  input.rs  lib.rs  list_row.rs  menu.rs  modal.rs  overlay.rs  popover.rs  rename_state.rs  selectable_list.rs  settings.rs  simple_input.rs  text_utils.rs  theme.rs  title_subtitle.rs  toggle.rs  tokens.rs
crates/okena-usage/: Cargo.toml
crates/okena-usage/src/: lib.rs
crates/okena-views-git/: Cargo.toml
crates/okena-views-git/src/: blame.rs  close_worktree_dialog.rs  commit_send.rs  git_header.rs  lib.rs  project_header.rs  settings.rs  watcher.rs  worktree_dialog.rs
crates/okena-views-remote/: Cargo.toml
crates/okena-views-remote/src/: lib.rs  remote_connect_dialog.rs  remote_context_menu.rs  remote_pair_dialog.rs
crates/okena-views-services/: Cargo.toml
crates/okena-views-services/src/: lib.rs  panel.rs  service_panel.rs  sidebar.rs  types.rs
crates/okena-views-sidebar/: Cargo.toml
crates/okena-views-sidebar/src/: activity_order.rs  agents_list.rs  color_picker.rs  context_menu.rs  drag.rs  folder_context_menu.rs  folder_list.rs  hook_list.rs  hook_log.rs  item_widgets.rs  lib.rs  project_list.rs  remote_list.rs  rename_directory_dialog.rs  service_list.rs  sidebar.rs  worktree_list.rs
crates/okena-views-terminal/: Cargo.toml
crates/okena-views-terminal/src/: actions.rs  lib.rs  shell_selector_overlay.rs  simple_input.rs
crates/okena-workspace/: CLAUDE.md  Cargo.toml
crates/okena-workspace/src/: access_history.rs  claude_env.rs  context.rs  focus.rs  hook_monitor.rs  hooks.rs  lib.rs  lifecycle.rs  persistence.rs  remote_apply.rs  remote_sync.rs  request_broker.rs  requests.rs  sessions.rs  settings.rs  sidebar_controller.rs  state.rs  toast.rs  visibility.rs  worktree_sync.rs
mobile/native/: Cargo.toml
mobile/native/src/: frb_generated.rs  lib.rs
(+776 files in other folders)
