[package]
name = "okena"
version = "0.4.4"
edition = "2021"

[dependencies]
# UI Framework (from Zed repo)
gpui = { git = "https://github.com/zed-industries/zed", package = "gpui" }

# UI Components
gpui-component = { git = "https://github.com/longbridge/gpui-component", package = "gpui-component" }

# Terminal Emulation
alacritty_terminal = "0.25"

# PTY Management
portable-pty = "0.9"

# Async Runtime
smol = "2.0"
async-channel = "2.3"
parking_lot = "0.12"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# System info
sysinfo = "0.33"
libc = "0.2"

# Utilities
uuid = { version = "1.10", features = ["v4"] }
dirs = "5.0"
log = "0.4"
env_logger = "0.11"
anyhow = "1.0"
thiserror = "2.0"
regex = "1.10"

# Asset embedding
rust-embed = "8.5"

# Time handling (cross-platform, thread-safe)
time = { version = "0.3", features = ["local-offset"] }

# Syntax highlighting
syntect = { version = "5", features = ["default-fancy"] }
two-face = { version = "0.5", default-features = false, features = ["syntect-fancy"] }

# Markdown parsing
pulldown-cmark = "0.12"

# Self-updater
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "blocking"] }
semver = "1"

# Remote control server
tokio = { version = "1", features = ["rt-multi-thread", "net", "sync", "macros", "time"] }
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["cors"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
base64 = "0.22"
rand = "0.8"
hmac = "0.12"
sha2 = "0.10"
subtle = "2.5"
data-encoding = "2.6"

# Pin core-text to 21.0.x to avoid core-graphics 0.24/0.25 conflict in zed-font-kit
[target.'cfg(target_os = "macos")'.dependencies]
core-text = ">=21.0, <21.1"

[target.'cfg(target_os = "windows")'.dependencies]
raw-window-handle = "0.6"

[target.'cfg(target_os = "windows")'.build-dependencies]
winresource = "0.1"
