[workspace]
members = [".", "crates/okena-mobile-ffi", "crates/okena-core", "crates/okena-transport", "crates/okena-git", "crates/okena-views-git", "crates/okena-views-services", "crates/okena-views-sidebar", "crates/okena-views-terminal", "crates/okena-terminal", "crates/okena-layout", "crates/okena-state", "crates/okena-hooks", "crates/okena-workspace", "crates/okena-ui", "crates/okena-usage", "crates/okena-files", "crates/okena-markdown", "crates/okena-extensions", "crates/okena-ext-claude", "crates/okena-ext-codex", "crates/okena-ext-github", "crates/okena-ext-updater", "crates/okena-services", "crates/okena-remote-client", "crates/okena-remote-server", "crates/okena-views-remote", "crates/okena-theme", "crates/okena-cli", "crates/okena-app-core", "crates/okena-app"]
resolver = "2"

[package]
name = "okena"
version = "0.27.0"
edition = "2024"
license = "MIT"

[dependencies]
# The entire UI/app layer (views, app coordinator, keybindings, action dispatch,
# logging, theme/terminal/etc. shim modules) lives in `okena-app`. The binary is
# a thin entry point that owns only `main.rs`, `assets.rs`, and `smoke_tests.rs`,
# so most of the former UI dependency set moved to `crates/okena-app/Cargo.toml`.
okena-app = { path = "crates/okena-app" }

# Shared core types + the lower-level crates `main.rs`/`smoke_tests.rs` still
# touch directly (workspace/terminal bootstrap, settings bridge, smoke tests).
okena-core = { path = "crates/okena-core" }
okena-cli = { path = "crates/okena-cli" }
okena-terminal = { path = "crates/okena-terminal" }
okena-workspace = { path = "crates/okena-workspace" }
okena-files = { path = "crates/okena-files" }
okena-views-terminal = { path = "crates/okena-views-terminal" }
okena-views-git = { path = "crates/okena-views-git" }
okena-ui = { path = "crates/okena-ui" }

# Extension system — registered at startup in main.rs.
okena-extensions = { path = "crates/okena-extensions" }
okena-ext-claude = { path = "crates/okena-ext-claude" }
okena-ext-codex = { path = "crates/okena-ext-codex" }
okena-ext-github = { path = "crates/okena-ext-github" }
okena-ext-updater = { path = "crates/okena-ext-updater" }

# UI Framework (from Zed repo) — main.rs creates the GPUI Application + window.
gpui = { git = "https://github.com/zed-industries/zed", package = "gpui" }
gpui_platform = { git = "https://github.com/zed-industries/zed", package = "gpui_platform", features = ["wayland", "x11", "font-kit"] }

# UI Components — gpui_component::init + theme sync at window creation.
gpui-component = { git = "https://github.com/longbridge/gpui-component", package = "gpui-component" }

# Serialization — settings bridge in main.rs + smoke_tests.
serde_json = "1.0"

# Global allocator — see [features] for the per-target default. glibc malloc
# fragments badly under okena's high-churn, multi-threaded small-allocation
# workload (git-status polling + per-frame render/layout), so RSS climbs into
# the GBs. mimalloc is the default on Windows (jemalloc doesn't build on MSVC)
# and stays available on Unix via `--features mimalloc` for comparison. Bypassed
# when the dhat heap profiler is active (see src/main.rs).
mimalloc = { version = "0.1", optional = true }

# Heap profiler (opt-in via `--features dhat-heap`). Off by default so it never
# touches normal builds — see [features] and src/main.rs.
dhat = { version = "0.3", optional = true }

# Logging — main.rs builds the env_logger sink and hands it to okena-app::logging.
log = "0.4"
env_logger = "0.11"

# Error type for the AssetSource impl in assets.rs.
anyhow = "1.0"

# Asset embedding (fonts/icons) in assets.rs.
rust-embed = "8.5"

[features]
# Per-target default allocator: jemalloc on Unix (the `tikv-jemallocator` dep is
# Unix-only — see [target.'cfg(unix)'.dependencies]), mimalloc on Windows. Both
# feature flags are enabled by `default`; src/main.rs picks the right one per
# target with precedence dhat > jemalloc(unix) > mimalloc, so the unused crate
# just isn't installed as the global allocator. Override on Unix with
# `--no-default-features --features mimalloc` (or `glibc` via plain
# `--no-default-features`).
default = ["jemalloc", "mimalloc"]
mimalloc = ["dep:mimalloc"]

# jemalloc: default on Unix. Shares a small fixed set of arenas across all
# threads (narenas:N in src/main.rs) instead of mimalloc's per-thread heaps, so
# okena's ~90 threads don't each pin their own segments — cut anon-heap RSS
# ~440→180 MB in testing. No-op on Windows (dep is Unix-only). Builds the C
# library from source (needs a C toolchain).
jemalloc = ["dep:tikv-jemallocator"]

# Enable the dhat in-process heap profiler. Build with:
#   cargo run --profile profiling --features dhat-heap
# On exit it writes dhat-heap.json (view at
# https://nnethercote.github.io/dh_view/dh_view.html).
dhat-heap = ["dep:dhat"]

# Profiling build: optimized like release, but keeps debug symbols so heaptrack
# / perf show readable stacks. Leaves the real `release` profile untouched.
#   cargo build --profile profiling
#   heaptrack ./target/profiling/okena
[profile.profiling]
inherits = "release"
debug = 1
strip = false

[dev-dependencies]
gpui = { git = "https://github.com/zed-industries/zed", package = "gpui", features = ["test-support"] }

# jemalloc is the default allocator on Unix (Linux + macOS). Kept Unix-only
# because tikv-jemalloc-sys doesn't build under MSVC; Windows uses mimalloc.
# Enabled by the `jemalloc` feature (in `default`); installed by src/main.rs.
[target.'cfg(unix)'.dependencies]
tikv-jemallocator = { version = "0.6", optional = true }

# Pin core-text to 21.0.x to avoid core-graphics 0.24/0.25 conflict in zed-font-kit
[target.'cfg(target_os = "macos")'.dependencies]
core-text = ">=21.0, <21.1"

[target.'cfg(target_os = "windows")'.build-dependencies]
winresource = "0.1"
