[package]
name = "okena-core"
version = "0.1.0"
edition = "2024"
license = "MIT"

[features]
default = []
# Exposes `process::testing` (command bus mock) to downstream crates' tests.
test-support = []

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
alacritty_terminal = "0.25"
log = "0.4"
dirs = "5.0"
anyhow = "1.0"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_System_Threading", "Win32_Foundation"] }

[dev-dependencies]
tempfile = "3"
