[package]
name = "okena-daemon-core"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
# Logic crates the daemon drives. All gpui-optional crates are pulled with
# `default-features = false` so NO gpui is linked into the headless daemon.
okena-core = { path = "../okena-core" }
okena-state = { path = "../okena-state" }
okena-terminal = { path = "../okena-terminal" }
okena-git = { path = "../okena-git" }
okena-hooks = { path = "../okena-hooks", default-features = false }
okena-workspace = { path = "../okena-workspace", default-features = false }
okena-services = { path = "../okena-services", default-features = false }
# Theme data types (gpui-free with default-features = false: avoids the
# `default = ["gpui"]` feature so no gpui is linked into the headless daemon).
okena-theme = { path = "../okena-theme", default-features = false }
# Action execution glue (`execute_action`, `ensure_terminal`, `ActionResult`).
# `default-features = false` drops its `gpui` default feature so the headless
# daemon links no gpui.
okena-app-core = { path = "../okena-app-core", default-features = false }
# Remote bridge types (`BridgeReceiver`, `BridgeMessage`, `RemoteCommand`).
# `default-features = false` drops its `gpui` default feature.
okena-remote-server = { path = "../okena-remote-server", default-features = false }

# Tokio reactor backing the gpui-free trait impls.
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros", "signal"] }
parking_lot = "0.12"
serde_json = "1.0"
log = "0.4"
# PTY event channel type (`PtyEvent` receiver) shared with `okena-terminal`.
async-channel = "2.3"
# Window-id parsing (the gpui-free `parse_window_id` copy).
uuid = { version = "1.10", features = ["v4"] }
# `DaemonCore::new` / `run` return `anyhow::Result`, and `?` over
# `RemoteServer::start` (which returns `anyhow::Result`) + the tokio runtime
# builder (`io::Result`) coalesce through it.
anyhow = "1.0"
