[package]
name = "okena-ext-claude"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
okena-extensions = { path = "../okena-extensions" }
okena-ui = { path = "../okena-ui" }
gpui = { git = "https://github.com/zed-industries/zed", package = "gpui" }
gpui-component = { git = "https://github.com/longbridge/gpui-component", package = "gpui-component" }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "blocking"] }
serde_json = "1.0"
smol = "2.0"
parking_lot = "0.12"
dirs = "5.0"
log = "0.4"
jiff = "0.2"

[dev-dependencies]
tempfile = "3"
