[package]
name = "okena-files"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
okena-core = { path = "../okena-core" }
okena-markdown = { path = "../okena-markdown" }
okena-ui = { path = "../okena-ui" }

gpui = { git = "https://github.com/zed-industries/zed", package = "gpui" }
gpui-component = { git = "https://github.com/longbridge/gpui-component", package = "gpui-component" }

syntect = { version = "5", features = ["default-fancy"] }
two-face = { version = "0.5", default-features = false, features = ["syntect-fancy"] }

grep-searcher = "0.1"
grep-regex = "0.1"
grep-matcher = "0.1"
ignore = "0.4"
nucleo-matcher = "0.3"
