[package]
name = "okena-files"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
okena-core = { path = "../okena-core" }
okena-transport = { path = "../okena-transport", features = ["blocking-http"] }
okena-markdown = { path = "../okena-markdown" }
okena-ui = { path = "../okena-ui" }

gpui = { git = "https://github.com/zed-industries/zed", package = "gpui" }
gpui-component = { git = "https://github.com/longbridge/gpui-component", package = "gpui-component" }

syntect = { version = "5", features = ["default-fancy"] }
two-face = { version = "0.5", default-features = false, features = ["syntect-fancy"] }

# Markdown highlighting: tree-sitter is ~20x faster than syntect's Markdown
# grammar on large files. tree-sitter (0.26) and streaming-iterator are already
# in the workspace via gpui-component, so this only adds the grammar crate.
tree-sitter = "0.26"
tree-sitter-md = { version = "0.5", features = ["parser"] }
streaming-iterator = "0.1"

grep-searcher = "0.1"
grep-regex = "0.1"
grep-matcher = "0.1"
ignore = "0.4"
nucleo-matcher = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
base64 = "0.22"
usvg = { version = "0.45", default-features = false }
ttf-parser = "0.25"
image = { version = "0.25", default-features = false }

[dev-dependencies]
tempfile = "3"
