[package]
name = "okena-git"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
okena-core = { path = "../okena-core" }
okena-files = { path = "../okena-files" }
okena-ui = { path = "../okena-ui" }

gpui = { git = "https://github.com/zed-industries/zed", package = "gpui" }
gpui-component = { git = "https://github.com/longbridge/gpui-component", package = "gpui-component" }

syntect = { version = "5", features = ["default-fancy"] }
smol = "2"
reqwest = { version = "0.12", features = ["blocking", "json"] }

parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.10", features = ["v4"] }
log = "0.4"
