[package]
name = "okena-git"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
okena-core = { path = "../okena-core" }

parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.10", features = ["v4"] }
log = "0.4"

[dev-dependencies]
tempfile = "3"
