[package]
name = "okena-markdown"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
okena-core = { path = "../okena-core" }
okena-ui = { path = "../okena-ui" }

gpui = { git = "https://github.com/zed-industries/zed", package = "gpui" }
gpui-component = { git = "https://github.com/longbridge/gpui-component", package = "gpui-component" }

pulldown-cmark = "0.12"
serde_yaml_ng = "0.10"

[dev-dependencies]
gpui = { git = "https://github.com/zed-industries/zed", package = "gpui", features = ["test-support"] }
