[package]
name = "okena-mobile-ffi"
version = "0.1.0"
edition = "2024"

[lib]
# cdylib + staticlib for the eventual ubrn-generated Android (NDK) / iOS
# (xcframework) artifacts; `lib` so it can also be linked as a normal Rust
# library (e.g. for `cargo test` and downstream tooling).
crate-type = ["cdylib", "staticlib", "lib"]

[dependencies]
# Shared data core: protocol/wire schema, WS message types, terminal-emulation glue.
okena-core = { path = "../okena-core" }
# Transport layer. The `client` feature pulls reqwest + tokio-tungstenite with the
# rustls backends (NDK-friendly — no OpenSSL cross-compile), so we inherit that
# backend selection via unification.
okena-transport = { path = "../okena-transport", features = ["client"] }

# uniffi in proc-macro mode (no UDL). `tokio` enables async export via
# `#[uniffi::export(async_runtime = "tokio")]`. Pinned to 0.31 to match the
# `uniffi-bindgen-react-native` (ubrn) version in mobile/rn (ubrn 0.31.0-3 pins
# `uniffi =0.31.0`, and the metadata contract version must match the bindgen).
uniffi = { version = "0.31", features = ["tokio"] }

# The connection/terminal engine carried over from the retired `mobile/native`
# crate (ConnectionManager, MobileConnectionHandler, TerminalHolder). These are
# its direct dependencies — no flutter_rust_bridge.
alacritty_terminal = "0.25"
tokio = { version = "1", features = ["rt-multi-thread", "net", "sync", "macros", "time"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
async-channel = "2.3"
parking_lot = "0.12"
uuid = { version = "1.10", features = ["v4"] }
log = "0.4"
serde_json = "1.0"
anyhow = "1.0"
