[package]
name = "okena-services"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
okena-core = { path = "../okena-core" }
okena-terminal = { path = "../okena-terminal" }

gpui = { git = "https://github.com/zed-industries/zed", package = "gpui" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
log = "0.4"
async-channel = "2.3"
libc = "0.2"
