[package]
name = "okena-services"
version = "0.1.0"
edition = "2024"
license = "MIT"

[features]
default = ["gpui"]
gpui = ["dep:gpui"]

[dependencies]
okena-core = { path = "../okena-core" }
okena-terminal = { path = "../okena-terminal" }

gpui = { git = "https://github.com/zed-industries/zed", package = "gpui", optional = true }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml_ng = "0.10"
log = "0.4"
thiserror = "2.0"
smol = "2.0"
async-channel = "2.3"
libc = "0.2"
