[package]
name = "okena-theme"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
okena-core = { path = "../okena-core" }

gpui = { git = "https://github.com/zed-industries/zed", package = "gpui" }
alacritty_terminal = "0.25"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
log = "0.4"
